sidebar width issue on smaller screen resolved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@
   --darkTua: #101011;
   --charcoal: #2a2a2a;
   --gray: #888888;
+  --lightgray: #c8c4c4ff;
   --blue: #1a71f6;
   --lightblue: #d9edff;
 
@@ -62,7 +63,7 @@
 .dark {
   --text-primary: var(--white);
   --text-secondary: var(--halfWhite);
-  --text-tertiary: var(--gray);
+  --text-tertiary: var(--lightgray);
   --bg-primary: var(--darkMuda);
   --bg-secondary: var(--darkTua);
 
